// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createUser() 👍 should set state with jwtClaim of existing user 1`] = `
Object {
  "email": "email@domain.com",
  "scope": "user",
  "uid": "0ae76c84-d939-456d-bb35-f60b7659ed6b",
}
`;

exports[`createUser() 👍 should set state with jwtClaim of new user 1`] = `
Object {
  "email": "new@email.com",
  "scope": "user",
  "uid": "e9ad2f8f-b871-4048-95ff-29577f4285f5",
}
`;
